# float

./: .gitignore  CONTEXT.md  LICENSE  README.md  build.sh  dev.sh  index.html  package-lock.json  package.json  vite.config.js.timestamp-1774574330687-e3087f0501885.mjs
.github/workflows/: release.yml
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: StickyNote.jsx
src/stores/: noteStore.js
