[package]
name = "float"
version = "0.1.0"
description = "Beautiful floating sticky notes for your desktop"
authors = ["Sharvari Suresh"]
license = "MIT"
repository = "https://github.com/somekiwiplease/float"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "window-maximize", "window-unmaximize",
  "global-shortcut-all",
  "system-tray",
  "global-shortcut",
  "window-show",
  "window-hide",
  "window-set-focus",
  "window-close",
  "window-create",
  "window-set-position",
  "window-set-size",
  "window-set-always-on-top",
  "window-start-dragging",
  "macos-private-api"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
